fix scrollbar problem

--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,6 @@ sidebar
 {
     background-color: cornsilk;
     position: fixed;
-    overflow: auto;
 
     left: 0;
     top: 0;
@@ -120,9 +119,12 @@ sidebar a:hover
 sidebar ul
 {
     list-style-type: none;
+    overflow: auto;
 
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: calc(100% - 215px);
 }
 
 .icons
